update link to news

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,8 +111,12 @@ body {
 }
 
 a {
-    text-decoration: none;
     color: white;
+}
+
+a:hover {
+    text-decoration: none;
+    color: wheat;
 }
 
 .col-lg {
